<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".views.DetailItemPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/detail_titleBar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/comment_s"
            android:textColor="@color/white"
            android:background="@color/purple_700"
            android:textSize="25sp"
            android:padding="5dp"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/detail_textview_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_buhari_is_dead"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:background="@color/black"
            android:padding="2dp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/detail_titleBar"/>

        <TextView
            android:id="@+id/detail_textview_userbody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:padding="2dp"
            android:background="@color/teal_200"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/detail_textview_title"/>

        <ImageButton
            android:id="@+id/detail_love"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintEnd_toStartOf="@+id/detail_comment"
            app:layout_constraintStart_toEndOf="@+id/detail_seen_btn"
            app:layout_constraintTop_toBottomOf="@+id/detail_textview_userbody"
            app:srcCompat="@drawable/ic_love" />

        <ImageButton
            android:id="@+id/detail_comment"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="55dp"
            app:layout_constraintEnd_toStartOf="@+id/share"
            app:layout_constraintTop_toBottomOf="@+id/detail_textview_userbody"
            app:srcCompat="@drawable/ic_baseline_comment_24" />

        <ImageButton
            android:id="@+id/share"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_textview_userbody"
            app:srcCompat="@drawable/ic_baseline_screen_share_24" />

        <ImageButton
            android:id="@+id/detail_seen_btn"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_textview_userbody"
            app:srcCompat="@drawable/ic_seen" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/detail_comment_reclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_comment" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusableInTouchMode="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@android:drawable/ic_input_add"
            android:contentDescription="@string/todo"
            android:focusable="true" />

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/purple_700"
            app:srcCompat="?attr/actionModeCloseDrawable" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>